[package]
name = "bedrock-client"
version = "0.1.0"
edition = "2021"

[dependencies]
binary-utils = { git = "https://github.com/ismaileke/binary-utils.git", branch = "master" }
minecraft-auth = { git = "https://github.com/ismaileke/minecraft-auth.git", branch = "master" }
mojang-nbt = { git = "https://github.com/ismaileke/mojang-nbt.git", branch = "master" }
log = "0.4.27"
rand = "0.9.2"
tokio = "1.47.1"
base64 = "0.22.1"
openssl = { version = "0.10.73", features = ["vendored"]}
serde_json = "1.0.142"
flate2 = "1.1.2"
chrono = "0.4.41"
miniz_oxide = "0.8.9"
hex = "0.4.3"
aes = "0.9.0-rc.0"
ctr = "0.10.0-rc.0"
libdeflater = "1.24.0"
uuid = "1.18.0"


#[lib]
#crate-type = ["staticlib"]