[package]
name = "bedrock-client"
version = "0.1.0"
edition = "2021"

[dependencies]
binary-utils = { git = "https://github.com/ismaileke/binary-utils.git", branch = "master" }
minecraft-auth = { git = "https://github.com/ismaileke/minecraft-auth.git", branch = "master" }
mojang-nbt = { git = "https://github.com/ismaileke/mojang-nbt.git", branch = "master" }
log = "0.4.28"
rand = "0.9.2"
tokio = { version = "1.49.0", features = ["full"] }
base64 = "0.22.1"
serde_json = "1.0.143"
flate2 = "1.1.2"
chrono = "0.4.41"
miniz_oxide = "0.8.9"
hex = "0.4.3"
aes = "0.9.0-rc.1"
ctr = "0.10.0-rc.1"
libdeflater = "1.24.0"
serde = { version = "1.0.228", features = ["derive"] }
linked-hash-map = "0.5.6"
p384 = { version = "0.13", features = ["ecdsa"] }
sha2 = "0.10"
uuid = "1.19.0"


#[lib]
#crate-type = ["staticlib"]